fix grid cropping issues

--- a/client/src/theme/05-hacks/hack.scss
+++ b/client/src/theme/05-hacks/hack.scss
@@ -1,4 +1,4 @@
-.temp-search-results {
+.hack-search-results {
   display: flex;
 
   > :first-child {
